--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -34,11 +34,11 @@ sleep_productivity <- sleep_productivity_stress |>
 
 ## Introduction
 
-Imagine waking up after only a few hours of sleep, then dragging your tired body through hours of coursework, assignments, and even exams! Now imagine doing that mostly everyday, for a duration of months? According to @averagesleepduration and @recommendedsleep, most college students only get 6-6.9 hours of sleep per day on average while the recommended amount for college students is 7-9 hours. Even though it is understandable that there are certain deadlines, exams, or just work generally that seems to be more important than few extra hours of sleep, this constant trade-off may lead to unexpected consequences to both their physical and mental health.
+Imagine waking up after only a few hours of sleep, and then dragging your tired body through hours of coursework, assignments, and even exams. Now imagine repeating that for days on end, for months! According to @averagesleepduration and @recommendedsleep, most college students get an average of only 6-6.9 hours of sleep per day, although the recommended amount of nightly sleep for college students is 7-9 hours. In the daily life of a college student, certain deadlines and exams often seem to be more important than a few extra hours of sleep. But if this trade-off is sustained over many consecutive days, such as throughout a semester, it may lead to unexpected consequences and actually impair overall academic performance.
 
-This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep a college student gets during weekday influence their productivity level?"**. As college students ourselves, our goal is to discover possible patterns of college students' sleep duration and whether it significantly accounts for our academic and work productivity throughout the week. Through understanding such connection, we can devise our own solutions to improve our college life inside-out, both academically and personally.
+This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep a college student gets during weekdays influence their productivity level?"**. As college students ourselves, our goal is to evaluate college students' sleep duration and whether it significantly impacts their academic and general productivity throughout the week. Understanding this connection can suppout us and other students in devising our own methods to improve our academic college lives, as well as our personal health.
 
-The data for this study was collected through a survey on Google Form. Our target population is college students, and our sample included students from different colleges such as Smith College, Amherst College, UMASS Amherst, etc. We mainly used a convenience sampling method, gathering many of our survey responses from our friends and acquaintances who are college students. We are investigating whether the amount of sleep a college student gets influence their productivity using **Two-Way Table Test of Independence** with **Chi-square Distribution**.
+The data for this study was collected through a Google Form survey. Our target population is college students, and our sample included students from various colleges including Smith College, Amherst College, and UMASS Amherst. We used a convenience sampling method, gathering many of our survey responses from our friends and acquaintances who are also college students. We are investigating whether the amount of sleep a college student gets on weekdays influences their productivity using a **Two-Way Table Test of Independence** with **Chi-square Distribution**.
 
 ## Exploratory Data Analysis
 
@@ -62,19 +62,19 @@ c.  Very productive
 
 Our target population is college students. 
 
-This data is collected through Google Form. We used convenience sampling with responses from our friends and their acquaintances from Smith College, UMASS Amherst, Amherst College, Brown University, MIT...(USA), National Economic University, Diplomatic Academy of Vietnam, Hanoi University of Science and Technology... (Vietnam). Since we did not request input regarding school name, we do not know the exact number of observations from each school.
+This data is collected through Google Form. We used convenience sampling with responses from our friends and their acquaintances from Smith College, UMASS Amherst, Amherst College, Brown University, and MIT (USA), as well as National Economic University, Diplomatic Academy of Vietnam, Hanoi University of Science and Technology (Vietnam). Our survey did not collect the name of the school currently attended by the participants, so we do not know the number of observations from each school.
 
-Other than directly sending to our friends at Smith, we posted it on Smith Confession to seek certain diversity and independence in Smithies observations. Evelyn also had her Vietnamese friends posted it on Meta posts and stories to seek responses from their network of Vietnamese college students; her other friends in other USA colleges also requested their acquaintances to fill out the survey, which helps widen the scope of the survey observation to students from other colleges.
+In addition to requesting participation in our survey from our friends at Smith, we posted our Google Form on Smith Confession to increrase diversity in the observations from Smithies. Evelyn also had her Vietnamese friends post it on Meta posts and stories to seek responses from their network of Vietnamese college students. Our friends at colleges other than Smith in the USA also shared our survey with their acquaintances, which helped widen the scope of our survey's observations to include students from as many colleges as possible.
 
 #### Dataset Introduction
 
-We collected **90 responses** i.e. observations through our survey for **6 variables** in total, including major division, class year, whether the respondent is an early bird or a night owl, their average amount of sleep during weekday in hours, their average productivity level during weekday.
+We collected **90 responses** i.e. observations through our survey for **6 variables** in total, including major division, class year, whether the respondent is an early bird or a night owl, their average amount of sleep during weekdays in hours, their average productivity level during weekdays.
 
-We use **2 variables** - their average amount of sleep during weekday in hours and their average productivity level during weekday. Specifically, we consider the weekday average amount of sleep to be our **explanatory variable** and the weekday average productivity level to be our **response variable**. Both variables are **ordinal** and **categorical**. 
+We used **2 variables** - average amount of sleep during weekdays in hours and average productivity level during weekdays. Specifically, we consider the weekday average amount of sleep our **explanatory variable** and the weekday average productivity level our **response variable**. Both variables are **ordinal** and **categorical**. 
 
 #### Data Wrangling
 
-Since we used multiple choice and check-boxes for most of our questions, we do not have to re-code the variables for consistency. Our questions regarding sleep duration, productivity, and stress level are also required, so we don't have any missing values in our data sets. However, since the variables are first named by the questions with space and capitalization, we have to clean the names and rename them to make sure they are concise and effective. We created 1 subset of the data set - sleep and productivity level with 2 variables regarding sleep duration and productivity level.
+Most of our questions were in multiple-choice format, so we did not have to re-code the variables for consistency. The questions regarding sleep duration, productivity, and stress level required answers in order to submit the form, eliminating the possibility of missing values in our data set. However, since the sheet generated by the Google Form listed the variable names as the questions (in sentence form including spaces and capitalization), we had to clean the names and rename them to be concise and effective. We created 1 subset of the data set - sleep and productivity level with 2 variables regarding sleep duration and productivity level.
 
 #### Variable Distribution
 
@@ -131,11 +131,11 @@ sleep_productivity_stress |>
   )
 ```
 
-From @fig-productivity, it can be seen that the majority, 47 out of 90, of observed college students feel somewhat productive on average during weekday. Nearly $1/3$ of the observations feel very productive on average during weekday while only 15 out of 90 observations do not feel productive on average during weekday.
+From @fig-productivity, it can be seen that the majority (47 out of 90) of observed college students feel somewhat productive on average during weekdays. Nearly $1/3$ of the observations feel very productive on average during weekdays while only 15 out of 90 observations do not feel productive on average during weekdays.
 
 ### Sleep Duration vs. Productivity Level
 
-Since college students' weekday average sleep duration and their weekday average productivity level are both **categorical variables**, we are using a **contingency table** as well as **stacked bar plot** to visualize their distribution and potential association.
+Since college students' weekday average sleep duration and their weekday average productivity level are both **categorical variables**, we are using a **contingency table** as well as a **stacked bar plot** to visualize their distribution and potential association.
 
 ```{r}
 #| label: tbl-sleep-productivity
@@ -175,27 +175,27 @@ sleep_productivity_stress |>
   )
 ```
 
-@tbl-sleep-productivity and the corresponding @fig-sleep-productivity shows the distribution of the observed values of productivity levels across different sleep duration. 
+@tbl-sleep-productivity and the corresponding @fig-sleep-productivity show the distribution of the observed values of productivity levels across different sleep duration. 
 
-It is noticeable that college students who sleep 5-7 hours on average make up the majority of "somewhat productive" group with 29 students while those who sleep less than 5 hours on average have the highest number of individuals in the "very productive" group with 12 students For both the "not productive" and "very productive" group, the number of college students sleeping 5-7 hours and more than 7 hours on average is the same. Surprisingly, in the "not productive" category, 7 students each reported sleeping 5-7 hours and more than 7 hours on average, both are significantly higher than the number of students sleeping less than 5 hours on average, which was only 1.
+It is noticeable that college students who sleep 5-7 hours on average make up the majority of "somewhat productive" group with 29 students, while those who sleep less than 5 hours on average have the highest number of individuals in the "very productive" group with 12 students For both the "not productive" and "very productive" group, the number of college students sleeping 5-7 hours and more than 7 hours on average is the same. Surprisingly, in the "not productive" category, 7 students each reported sleeping 5-7 hours and more than 7 hours on average, both are significantly higher than the number of students sleeping less than 5 hours on average, which was only 1.
 
 ## Results
 
 #### Type of Test
 
-Since college students' weekday sleep duration and their productivity level are both **categorical variables** with each of them have 3 categories, we use inference of two-way tables. Therefore we are using the **Two-Way Table Test of Independence** with **Chi-square Distribution** through the **Mathematical Model**.
+Since college students' weekday sleep duration and their productivity level are both **categorical variables** of 3 categories each, we use inference of two-way tables. Therefore we are using the **Two-Way Table Test of Independence** with **Chi-square Distribution** using a **Mathematical Model**.
 
 #### Hypotheses
 
-To investigate whether the amount of sleep a college student gets during weekday influence their productivity level, our null hypothesis $H_0$ is that college students' weekday sleep duration and productivity level are independent. Our alternative hypothesis $H_A$ is that college students' weekday sleep duration and productivity level are dependent.
+To investigate whether the amount of sleep a college student gets during weekdays influences their productivity level, our null hypothesis $H_0$ is that college students' weekday sleep duration and productivity level are independent. Our alternative hypothesis $H_A$ is that college students' weekday sleep duration and productivity level are dependent.
 
 #### Conditions
 
 The Conditions for Two-Way Table Test of Independence include **Independence**, in which the data values were collected were from a random sample, and **Large Sample**, in which $e_{i,j} \geq 5$ for each cell.
 
-For the **Independence** condition, the use of convenience sampling method may introduce certain dependence among observations by overrepresenting students from certain social circles or colleges with similar traits, behaviors, or habits, potentially skewing the results. Thus, Independence condition for Two-Way Table Test of Independence is not met.
+For the **Independence** condition, the use of convenience sampling method may introduce certain dependence among observations by overrepresenting students from certain social circles or colleges with similar traits, behaviors, or habits, potentially skewing the results. Thus, the Independence condition for Two-Way Table Test of Independence is not met.
 
-If college students' weekday sleep duration and productivity level are truly independent under the null hypothesis $H_0$ of independence, our expected count - the frequency that would be expected in a cell - for all cells would be as following.
+If college students' weekday sleep durations and productivity levels are truly independent under the null hypothesis $H_0$ of independence, our expected count - the frequency that would be expected in a cell - for all cells would be as follows:
 
 ```{r}
 #| label: tbl-sleep-productivity-expected
@@ -211,7 +211,7 @@ kable(round(expected_counts, 2))
 
 For the **Large Sample** condition, there are 2 expected counts that do not meet the criteria of $e_{i,j} \geq 5$ - $e_{2,1}$ and $e_{3,1}$ - as shown in @tbl-sleep-productivity-expected. Thus, Large Sample condition for Two-Way Table Test of Independence is not met.
 
-**Note**: Because of both conditions not met, the test statistics $\chi^2$ may not have a Chi-square Distribution. However, we will still run the Two-Way Table Inference of Independence.
+**Note**: Because both conditions are not met, the test statistics $\chi^2$ may not have a Chi-square Distribution. However, we will still run the Two-Way Table Inference of Independence.
 
 #### Chi-Square Testing
 
@@ -239,7 +239,7 @@ curve(dchisq(x, df = 4), col = 'black',  from = 0,to = 25,
       xlab = "", ylab = "", xaxt = "n",  yaxt = "n")
 ```
 
-Our null distribution, as shown in @fig-chi-square, is a **Chi-square Distribution** which is always right-skewed, only has positive values, and has a parameter of $df = 4$. The degree of freedom changes the shape of the Chi-square distribution.
+Our null distribution, as shown in @fig-chi-square, is a **Chi-square Distribution** which is always right-skewed, only has positive values, and has a parameter of $df = 4$. The degree of freedom dictates the shape of the Chi-square distribution.
 
 ##### p-value Mathematical Model Plot
 
@@ -262,26 +262,24 @@ abline(v = test_stat, col = "red", lwd = 2)
 
 Given that we only take the shaded right tail area, as shown in @fig-chi-square-p-value, to calculate our p-value, our $p-value = .006615$. This means that the probability that we observe our $\chi^2$ as large as $14.223$ or larger is $.006615$.
 
-We choose our significance level $\alpha = .01$ to control the Type 1 error rate in which we concluded that college students' weekday sleep duration and productivity level are dependent when they are in fact independent.
+We choose our significance level $\alpha = .01$ to control the Type 1 error rate. A Type 1 error in this context would mean that we had concluded that that college students' weekday sleep duration and productivity levels are dependent when they are in fact independent.
 
 ##### Conclusion & Interpretation
 
-Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that college students' weekday sleep duration and productivity level are significantly dependent. The data provides statistically significant evidence to support the claim that college students' weekday productivity level is dependent on their sleep duration at $\alpha = .01$ significance level. Therefore, it is reasonable to believe that the amount of sleep a college student gets during weekday influences their productivity level.
+Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis to conclude that college students' weekday sleep duration and productivity levels are significantly dependent. The data provides statistically significant evidence to support the claim that college students' productivity levels are dependent on the duration of sleep at they get on weekdays, at the $\alpha = .01$ significance level. Therefore, it is reasonable to believe that the amount of sleep a college student gets during weekdays influences their productivity level.
 
 ## Discussion
 
-The statistical analysis above set out to test the relationship between weekday average hours of sleep and productivity level in college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets influences their productivity level, which answers our original research question. Our population of interest was all college students, but our sample is not accurately representative of the population of interest. Our data includes observations from students at multiple colleges, but which colleges we received data from is based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
+The statistical analysis above set out to test the relationship between average hours of sleep gotten on weekdays and productivity level in college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets on weekdays influences their productivity level, which answered our original research question. However, our population of interest was all college students, and our sample is not accurately representative of this population of interest. Although our data included observations from students at multiple colleges, the colleges we received data from was based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
 
-Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into a categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in a categorical and ordinal variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within our three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical is the Two-Way Table Test of Independence using a mathematical model. 
+Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into an ordinal categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in another ordinal categorical variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within these three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical was the Two-Way Table Test of Independence using a mathematical model. 
 
-A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition cannot be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If it is smaller than it should be, we may be more likely to reject the null hypothesis when it is true, which is a Type 1 error. If it is bigger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is true, which is a Type 2 error.
+A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays (at the $\alpha = .01$ significance level, p-value = .006615).  
 
-We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekday.  
+Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019 is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019 found that longer duration of sleep is strongly associated with improved college academic performance.
 
-Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation, the ones most pertinent to the research we conducted are included here. Based on these results and parameters of @preetha2020knowledge, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
+This is reaffirmed by the results of another thematically related study. @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation; only the ones most pertinent to the research we conducted are included here. Once again, the published literature reaffirms our finding that getting less sleep diminishes a student’s ability to perform productively. Based on the results of both of these studies, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
 
-This is reaffirmed by the results of another related analysis of medical students in @hassan2023relationship. Variables collected include sleep quality, as measured by the Pittsburgh Sleep Quality Index, levels of depression and anxiety, as scored on the Hamilton Depression (or Anxiety) Rating Scales, respectively, and academic performance scores. @hassan2023relationship concluded that poor sleep quality is correlated with higher levels of depression and anxiety, which in turn correlates negatively with academic performance. Once again, the published literature reaffirms our finding that getting less sleep diminishes a student’s ability to perform productively.
-
-Many other analyses could be conducted with the data we gathered using this form. These other variables dictate the most feasible and convenient possible future extensions to this research project. Our Google Form collected a total of six variables, only two of which were used for the statistical analysis conducted above. The variables we did not use include class year, major division, whether the respondent considers themselves an early bird or a night owl, and stress level (as a categorical variable formulated similarly to those used in the analysis carried out above). Based on these variables, we could consider examining whether stress (or productivity) levels vary based on major division or class year. We could also evaluate whether being an early bird or a night owl is correlated with higher or lower stress or productivity levels. Beyond the scope of the dataset we have collected, we could consider using random sampling to select colleges throughout the world from which to collect data, and then randomly sample students enrolled there in order to compile a larger and more robust data set. Statistical analyses of such dataset would yield results generalizable to the entire target population of college students.
+Many other analyses could be conducted with the data we gathered using this form. These other variables dictate the most feasible and convenient possible future extensions to this research project. Our Google Form collected a total of six variables, only two of which were used for the statistical analysis conducted above. The variables we did not use include class year, major division, whether the respondent considers themselves an early bird or a night owl, and stress level (as a categorical variable formulated similarly to those used in the we conducted). Based on these variables, we could consider examining whether stress (or productivity) levels vary based on major division or class year. We could also evaluate whether being an early bird or a night owl is correlated with higher or lower stress or productivity levels. Beyond the scope of the dataset we have collected, we could consider using random sampling to select colleges throughout the world from which to collect data, and then randomly sample students enrolled there in order to compile a larger and more robust data set. Statistical analyses of such a dataset would yield results generalizable to the entire target population of college students.
 
 ## Bibliography
